# gesc

./: .gitignore  pyproject.toml  requirements.txt
src/: __main__.py
src/util/: args.py  cvscroll.py  mouse_action_handler.py
src/util/data_hand_signs/: read.py
tests/: test_gesc.py
